--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.9.2
 anyio==3.6.2
 bcrypt==4.0.1
+cffi==1.15.1
 click==8.1.3
+cryptography==39.0.0
+ecdsa==0.18.0
 fastapi==0.89.1
 greenlet==2.0.1
 h11==0.14.0
@@ -10,8 +13,13 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 passlib==1.7.4
 psycopg2==2.9.5
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.10.4
 python-dotenv==0.21.1
+python-jose==3.3.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.46
 starlette==0.22.0
