--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pycparser==2.21
 pydantic==1.10.4
 python-dotenv==0.21.1
 python-jose==3.3.0
+python-multipart==0.0.5
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
