--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
-POSTGRES_DB = full_fastapi
-POSTGRES_USER = turko
-POSTGRES_PASSWORD = turko
-POSTGRES_SERVER = localhost
-POSTGRES_PORT = 5432
+# Base de datos Local
+; POSTGRES_DB = full_fastapi
+; POSTGRES_USER = turko
+; POSTGRES_PASSWORD = turko
+; POSTGRES_SERVER = localhost
+; POSTGRES_PORT = 5432
+
+
+# Base de datos Railway
+
+POSTGRES_DB = railway
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = wUaAlPcMHVJzagroyyEI
+POSTGRES_SERVER = containers-us-west-84.railway.app
+POSTGRES_PORT = 5909
