--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Base de datos Local
-; POSTGRES_DB = full_fastapi
-; POSTGRES_USER = turko
-; POSTGRES_PASSWORD = turko
-; POSTGRES_SERVER = localhost
-; POSTGRES_PORT = 5432
+# POSTGRES_DB = full_fastapi
+# POSTGRES_USER = turko
+# POSTGRES_PASSWORD = turko
+# POSTGRES_SERVER = localhost
+# POSTGRES_PORT = 5432
 
 
 # Base de datos Railway
