nueva migracion de la base de datos en railway

--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@
 
 POSTGRES_DB = railway
 POSTGRES_USER = postgres
-POSTGRES_PASSWORD = wUaAlPcMHVJzagroyyEI
-POSTGRES_SERVER = containers-us-west-84.railway.app
-POSTGRES_PORT = 5909
+POSTGRES_PASSWORD = fjCIfi4zL0whtlkl1brP
+POSTGRES_SERVER = containers-us-west-169.railway.app
+POSTGRES_PORT = 6938
